--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<div>
-this is a test
-</div>
+<!doctype html>
+<html>
+  <head>
+    <title>Benjamin Loew Porfolio</title>
+	<h1>Benjmain Loew</h1>
+  </head>
+  <body>
+    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+	<link href="styles.css" rel="stylesheet" />
+  </body>
+</html>
