--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
-  <head>
+	<div class="title-background">
     <title>Benjamin Loew Porfolio</title>
 	<h1>Benjmain Loew</h1>
-  </head>
+  </div>
   <body>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
 	<link href="styles.css" rel="stylesheet" />
