--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<div class="title-background">
     <title>Benjamin Loew Porfolio</title>
-	<h1>Benjmain Loew</h1>
+	<h1>Benjamin Loew</h1>
   </div>
   <body>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
