--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!doctype html>
 <html>
+<body style="background-color:#191730;">
 	<div class="title-background">
     <title>Benjamin Loew Porfolio</title>
 	<h1>Benjamin Loew</h1>
+	 background-image: url(https://www.mozilla.org/media/img/logos/firefox/logo-quantum.9c5e96634f92.png);
   </div>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p><strong>Lorem</strong> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	<link href="styles.css" rel="stylesheet" />
   </body>
+	<body>
+    <button type="button">Click Me!</button>
+  </body>
+
+  
 </html>
